# comfyui-poor-textarea

./: README.md  __init__.py  package-lock.json  package.json  pyproject.toml
js/: index.js
js/libs/: poor-textarea.min.mjs  poor-textarea.mjs
