[project]
name = "comfyui-poor-textarea"
description = "Add commentify, indentation, auto-close brackets in textarea."
version = "1.0.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-poor-textarea"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-poor-textarea"
Icon = ""
